--- a/about.html
+++ b/about.html
@@ -1,35 +1,3 @@
-<!doctype html><html lang="hi"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>About URP</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="assets/style.css" rel="stylesheet"></head><body>
-
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <div class="container">
-    <a class="navbar-brand" href="index.html"><img src="assets/urp-logo-A.svg" class="logo" alt="URP Logo"/></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav"><span class="navbar-toggler-icon"></span></button>
-    <div class="collapse navbar-collapse" id="nav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="vision.html">Vision</a></li>
-        <li class="nav-item"><a class="nav-link" href="join.html">Join</a></li>
-        <li class="nav-item"><a class="nav-link" href="candidates.html">Candidates</a></li>
-        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-<section class="container container-card">
-  <h2>हम कौन हैं</h2>
-  <p>Uttarakhand Reform Party (URP) ... मिशन, उद्देश्य और टीम का संक्षेप।</p>
-  <h4>Mission</h4>
-  <ul><li>Youth Empowerment</li><li>Women Safety</li><li>Mountain-first Development</li></ul>
-</section>
-
-<footer class="footer">
-  <div class="container">
-    <p>© 2025 Uttarakhand Reform Party — All Rights Reserved.</p>
-  </div>
-</footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-</body></html>
+<!doctype html><html lang="hi"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>About URP</title><link rel="stylesheet" href="assets/style.css"></head><body>
+<header class="header"><div class="container nav"><div class="logo"><img src="assets/logo.svg" alt="URP logo"/><div style="color:white">Uttarakhand Reform Party</div></div></div></header>
+<main class="section container"><h2>About URP</h2><p class="small">URP एक नागरिक-आधारित आंदोलन है जिसका लक्ष्य उत्तराखण्ड में पारदर्शिता और स्थानीय विकास लाना है।</p></main><footer class="footer"><div class="container">© 2025 URP</div></footer></body></html>
