--- a/join.html
+++ b/join.html
@@ -1,62 +1,21 @@
 <!doctype html>
 <html lang="hi">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Join URP</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body { font-family: Arial, Helvetica, sans-serif; background:#f5f7fa; color:#222; }
-    .hero { background:#0a3d62; color:white; padding:30px 20px; text-align:center; }
-    .container-card { max-width:1100px; margin:auto; padding:30px; }
-    .card-ct { border-radius:8px; box-shadow:0 4px 20px rgba(0,0,0,0.06); padding:20px; background:white; }
-    .btn-urp { background:#f39c12; color:white; border:none; padding:10px 18px; border-radius:6px; }
-    .logo { height:36px; }
-    .footer { background:#2d3436; color:white; padding:18px 0; text-align:center; margin-top:30px; }
-  </style>
-</head>
-<body>
-<nav class="navbar navbar-expand-lg navbar-dark" style="background:#3b6df3;">
-  <div class="container">
-    <a class="navbar-brand" href="index.html">URP</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav"><span class="navbar-toggler-icon"></span></button>
-    <div class="collapse navbar-collapse" id="nav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="vision.html">Vision</a></li>
-        <li class="nav-item"><a class="nav-link active" href="join.html">Join</a></li>
-        <li class="nav-item"><a class="nav-link" href="candidates.html">Candidates</a></li>
-        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-      </ul>
+<head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Join URP</title>
+<link rel="stylesheet" href="assets/style.css"></head><body>
+<header class="header"><div class="container nav"><div class="logo"><img src="assets/logo.svg" alt="URP logo"/><div style="color:white">Uttarakhand Reform Party</div></div><nav class="navlinks"><a href="about.html">About</a><a href="vision.html">Vision</a><a href="join.html">Join</a><a href="candidates.html">Candidates</a><a href="contact.html">Contact</a></nav></div></header>
+<main class="section container">
+  <h2>Join URP — Membership</h2>
+  <div style="display:flex;gap:18px;flex-wrap:wrap">
+    <div style="flex:1" class="card">
+      <h3>Why join?</h3>
+      <p class="small">Be part of a reform movement focused on the mountains — volunteer, lead or donate.</p>
+      <ul class="small"><li>Local action groups</li><li>Skill & livelihood programs</li><li>Women safety initiatives</li></ul>
+    </div>
+    <div style="width:560px" class="card">
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeIXaDJojCZDJYDThfXSX-bIx3CozwdTyEp2hXWzdptEozBZg/viewform?embedded=true" style="width:100%;height:760px;border:0"></iframe>
     </div>
   </div>
-</nav>
-
-<header class="hero">
-  <div class="container">
-    <h1>Join Uttarakhand Reform Party</h1>
-    <p class="lead">इस फॉर्म को भरकर URP से जुड़ें — आपकी जानकारी सुरक्षित रहेगी।</p>
-  </div>
-</header>
-
-<section class="container container-card">
-  <h2>URP Membership Form</h2>
-  <p>नीचे दिए गए फॉर्म को भरें — आपकी responses सीधे हमारी central Google Sheet में जाएँगी।</p>
-
-  <!-- Embedded Google Form -->
-  <div class="card-ct">
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeIXaDJojCZDJYDThfXSX-bIx3CozwdTyEp2hXWzdptEozBZg/viewform?usp=dialog?embedded=true" width="100%" height="900" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-  </div>
-
-  <p class="mt-3 small">Note: This embed uses Google Forms. If you face any issue, open the form <a href="https://docs.google.com/forms/d/e/1FAIpQLSeIXaDJojCZDJYDThfXSX-bIx3CozwdTyEp2hXWzdptEozBZg/viewform?usp=dialog" target="_blank" rel="noopener">in a new tab</a>.</p>
-</section>
-
-<footer class="footer">
-  <div class="container text-center">
-    © 2025 Uttarakhand Reform Party — All Rights Reserved.
-  </div>
-</footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-</body>
-</html>
+  <p class="small">If the form doesn't load, <a href="https://docs.google.com/forms/d/e/1FAIpQLSeIXaDJojCZDJYDThfXSX-bIx3CozwdTyEp2hXWzdptEozBZg/viewform" target="_blank">open it in a new tab</a>.</p>
+</main>
+<footer class="footer"><div class="container"><div style="display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap"><div>© 2025 Uttarakhand Reform Party</div><div class="small">Contact: contact@uttarakhandreform.org</div></div></div></footer>
+</body></html>
