--- a/index.html
+++ b/index.html
@@ -1,13 +1,524 @@
 <!doctype html>
 <html lang="hi">
-<head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>URP - Uttarakhand Reform Party</title>
-<link rel="stylesheet" href="assets/style.css"></head><body>
-<header class="header"><div class="container nav"><div class="logo"><img src="assets/logo.svg" alt="URP logo"/><div style="color:white">Uttarakhand Reform Party</div></div><nav class="navlinks"><a href="about.html">About</a><a href="vision.html">Vision</a><a href="join.html">Join</a><a href="candidates.html">Candidates</a><a href="contact.html">Contact</a></nav></div></header>
-<main>
-<section class="hero container"><div style="display:flex;gap:24px;align-items:center;flex-wrap:wrap"><div style="flex:1"><h1 style="font-size:48px;margin:0;color:var(--primary)">बदलाव भी, ज़िम्मेदारी भी</h1><p class="lead">पारदर्शिता, स्थानीय रोजगार और पर्वतीय विकास — URP का नया विज़न</p><a class="cta" href="join.html">Join URP</a></div><div style="width:420px"><img src="assets/images/hero.svg" style="width:100%;border-radius:10px;box-shadow:0 12px 30px rgba(10,30,70,0.08)"></div></div></section>
-<section class="section container"><h2>हमारे मुख्य वादे</h2><div class="grid"><div class="card"><h3>100-दिन प्रोग्राम</h3><p class="small">Quick audits and visible local fixes for roads, water & health.</p></div><div class="card"><h3>युवा सशक्तिकरण</h3><p class="small">Skill centers and entrepreneurship support for youth.</p></div><div class="card"><h3>महिला सुरक्षा</h3><p class="small">Street lighting, women help desks and rapid response.</p></div><div class="card"><h3>ग्रामीण रोजगार</h3><p class="small">Horticulture clusters and eco-tourism initiatives.</p></div></div></section>
-<section class="section container"><h2>हमारे क्षेत्रीय काम</h2><div class="grid"><div class="card"><img src="assets/images/img1.svg" style="width:100%;border-radius:8px;margin-bottom:12px"><h4>Dehradun Pilot</h4><p class="small">Local project to test transparency dashboard.</p></div><div class="card"><img src="assets/images/img2.svg" style="width:100%;border-radius:8px;margin-bottom:12px"><h4>Almora Horticulture</h4><p class="small">Farmer cluster pilot.</p></div><div class="card"><img src="assets/images/img3.svg" style="width:100%;border-radius:8px;margin-bottom:12px"><h4>Uttarkashi Water</h4><p class="small">Mountain springs restoration.</p></div><div class="card"><img src="assets/images/img4.svg" style="width:100%;border-radius:8px;margin-bottom:12px"><h4>Haridwar Skills</h4><p class="small">Youth skill centers.</p></div></div></section>
-<section class="section container"><div class="card"><h3>Volunteer & Membership</h3><p class="small">Join our movement — scan QR or <a href="join.html">fill the membership form</a>.</p></div></section>
-</main>
-<footer class="footer"><div class="container"><div style="display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap"><div>© 2025 Uttarakhand Reform Party</div><div class="small">Contact: contact@uttarakhandreform.org</div></div></div></footer>
-</body></html>
+<head>
+  <meta charset="utf-8">
+  <title>Uttarakhand Reform Party (URP) — Official Website</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="description" content="URP is a mountain-first reform movement focused on transparent governance, youth empowerment, women safety and rural livelihoods in Uttarakhand.">
+  <!-- Optional: existing CSS if present -->
+  <link rel="stylesheet" href="assets/style.css">
+  <style>
+    /* Basic modern styling – works even if assets/style.css is simple */
+    :root{
+      --primary:#0a3d62;
+      --primary-soft:#0f5090;
+      --accent:#f39c12;
+      --bg:#f5f7fa;
+      --card:#ffffff;
+      --muted:#6b7280;
+    }
+    *{box-sizing:border-box;margin:0;padding:0}
+    body{
+      font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+      background:var(--bg);
+      color:#111827;
+    }
+    a{text-decoration:none;color:inherit}
+    .header{
+      background:linear-gradient(90deg,var(--primary),#3b6df3);
+      color:#fff;
+      position:sticky;
+      top:0;
+      z-index:20;
+      box-shadow:0 8px 20px rgba(15,35,75,0.25);
+    }
+    .container{
+      max-width:1120px;
+      margin:0 auto;
+      padding:0 18px;
+    }
+    .nav{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      padding:14px 0;
+    }
+    .logo-wrap{
+      display:flex;
+      align-items:center;
+      gap:10px;
+    }
+    .logo-wrap img{
+      height:42px;
+      border-radius:999px;
+      background:#fff;
+      padding:4px;
+    }
+    .brand-title{
+      font-weight:800;
+      letter-spacing:.03em;
+      font-size:15px;
+    }
+    .navlinks{
+      display:flex;
+      gap:18px;
+      font-weight:500;
+      font-size:14px;
+    }
+    .navlinks a{
+      color:rgba(255,255,255,0.94);
+      padding:4px 0;
+    }
+    .navlinks a.active{
+      border-bottom:2px solid var(--accent);
+    }
+    .hero{
+      padding:60px 0 40px;
+      background:
+        radial-gradient(circle at top left,#e0ecff,transparent 55%),
+        radial-gradient(circle at bottom right,#ffe9d0,transparent 55%);
+    }
+    .hero-grid{
+      display:flex;
+      gap:32px;
+      align-items:center;
+      flex-wrap:wrap;
+    }
+    .hero-main{
+      flex:1 1 320px;
+    }
+    .hero-kicker{
+      font-size:12px;
+      text-transform:uppercase;
+      letter-spacing:.22em;
+      color:var(--muted);
+      margin-bottom:10px;
+    }
+    .hero h1{
+      font-size:34px;
+      line-height:1.2;
+      color:var(--primary);
+      margin-bottom:10px;
+    }
+    .hero-sub{
+      font-size:15px;
+      color:#1f2933;
+      margin-bottom:16px;
+    }
+    .badge-row{
+      display:flex;
+      flex-wrap:wrap;
+      gap:8px;
+      margin-bottom:18px;
+    }
+    .badge{
+      background:rgba(10,61,98,0.07);
+      border-radius:999px;
+      padding:6px 12px;
+      font-size:11px;
+      color:#0b365c;
+    }
+    .cta-row{
+      display:flex;
+      flex-wrap:wrap;
+      gap:10px;
+      align-items:center;
+    }
+    .btn-primary{
+      display:inline-block;
+      background:var(--accent);
+      color:#111827;
+      padding:10px 18px;
+      border-radius:999px;
+      font-weight:700;
+      font-size:14px;
+      box-shadow:0 8px 22px rgba(177,96,10,0.35);
+    }
+    .btn-ghost{
+      display:inline-block;
+      border-radius:999px;
+      border:1px solid rgba(15,35,75,0.2);
+      padding:9px 16px;
+      font-size:14px;
+      color:var(--primary-soft);
+      background:#fff;
+    }
+    .hero-meta{
+      display:flex;
+      flex-wrap:wrap;
+      gap:18px;
+      margin-top:18px;
+      font-size:12px;
+      color:var(--muted);
+    }
+    .hero-meta strong{color:#111827}
+    .hero-visual{
+      flex:1 1 280px;
+      min-width:260px;
+    }
+    .hero-card{
+      background:linear-gradient(145deg,#0a3d62,#163f72);
+      border-radius:20px;
+      padding:18px;
+      color:#fff;
+      box-shadow:0 20px 40px rgba(5,25,55,0.6);
+    }
+    .hero-card h3{
+      font-size:18px;
+      margin-bottom:6px;
+    }
+    .hero-card p{
+      font-size:13px;
+      opacity:.9;
+    }
+    .hero-kpi{
+      display:flex;
+      gap:12px;
+      flex-wrap:wrap;
+      margin-top:10px;
+      font-size:12px;
+    }
+    .hero-kpi-item{
+      background:rgba(255,255,255,0.08);
+      border-radius:12px;
+      padding:8px 10px;
+    }
+    .hero-kpi-item span{
+      display:block;
+      font-size:17px;
+      font-weight:700;
+    }
+    .section{
+      padding:32px 0;
+    }
+    .section-header{
+      display:flex;
+      flex-wrap:wrap;
+      justify-content:space-between;
+      gap:10px;
+      margin-bottom:16px;
+    }
+    .section-header h2{
+      font-size:22px;
+      color:#111827;
+    }
+    .section-header p{
+      font-size:13px;
+      color:var(--muted);
+      max-width:430px;
+    }
+    .grid{
+      display:grid;
+      grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+      gap:14px;
+    }
+    .card{
+      background:var(--card);
+      border-radius:14px;
+      padding:16px 16px 18px;
+      box-shadow:0 10px 30px rgba(15,23,42,0.06);
+    }
+    .card h3, .card h4{
+      font-size:16px;
+      margin-bottom:6px;
+      color:#0b2b4a;
+    }
+    .card p{
+      font-size:13px;
+      color:var(--muted);
+    }
+    .tag-row{
+      display:flex;
+      flex-wrap:wrap;
+      gap:6px;
+      margin-top:6px;
+    }
+    .tag{
+      font-size:11px;
+      border-radius:999px;
+      padding:3px 8px;
+      background:#eef2ff;
+      color:#3730a3;
+    }
+    .two-col{
+      display:grid;
+      grid-template-columns:minmax(0,1.1fr) minmax(0,0.9fr);
+      gap:20px;
+    }
+    .timeline{
+      list-style:none;
+      padding-left:0;
+      font-size:13px;
+    }
+    .timeline li{
+      margin-bottom:8px;
+      padding-left:18px;
+      position:relative;
+      color:var(--muted);
+    }
+    .timeline li::before{
+      content:'•';
+      position:absolute;
+      left:0;
+      top:0;
+      color:var(--accent);
+      font-size:18px;
+      line-height:1;
+    }
+    .stats-row{
+      display:flex;
+      flex-wrap:wrap;
+      gap:12px;
+      margin-top:8px;
+    }
+    .stat{
+      flex:1 1 140px;
+      background:#fff;
+      border-radius:12px;
+      padding:10px 12px;
+      box-shadow:0 8px 20px rgba(15,23,42,0.04);
+      font-size:12px;
+    }
+    .stat span{
+      display:block;
+      color:var(--muted);
+      margin-bottom:4px;
+    }
+    .stat strong{
+      font-size:18px;
+      color:#111827;
+    }
+    .footer{
+      background:#0b2b4a;
+      color:#fff;
+      padding:22px 0 18px;
+      margin-top:24px;
+      font-size:12px;
+    }
+    .footer-grid{
+      display:flex;
+      flex-wrap:wrap;
+      gap:14px;
+      justify-content:space-between;
+    }
+    .footer a{color:#e5e7eb}
+    .small{font-size:12px;color:var(--muted);}
+    @media (max-width:800px){
+      .navlinks{display:none;}
+      .hero-grid{flex-direction:column;}
+      .two-col{grid-template-columns:1fr;}
+    }
+  </style>
+</head>
+<body>
+
+  <!-- HEADER / NAVBAR -->
+  <header class="header">
+    <div class="container nav">
+      <div class="logo-wrap">
+        <!-- अगर आपके पास assets/logo.svg है तो यह image दिखेगी; नहीं है तो आप logo हटा सकते हैं -->
+        <img src="assets/logo.svg" alt="URP logo">
+        <div class="brand-title">Uttarakhand Reform Party</div>
+      </div>
+      <nav class="navlinks">
+        <a href="index.html" class="active">Home</a>
+        <a href="about.html">About</a>
+        <a href="vision.html">Vision</a>
+        <a href="join.html">Join</a>
+        <a href="candidates.html">Candidates</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <!-- HERO SECTION -->
+    <section class="hero">
+      <div class="container hero-grid">
+        <div class="hero-main">
+          <div class="hero-kicker">UTTARAKHAND REFORM PARTY • URP</div>
+          <h1>बदलाव भी, ज़िम्मेदारी भी — एक नया उत्तराखंड</h1>
+          <p class="hero-sub">
+            25 साल में सरकारें बदलीं, पर सिस्टम नहीं। URP का लक्ष्य है पारदर्शी शासन, पहाड़-केंद्रित विकास और 
+            युवा-नेतृत्व वाला बदलाव।
+          </p>
+          <div class="badge-row">
+            <div class="badge">Mountain-first development</div>
+            <div class="badge">Transparent governance</div>
+            <div class="badge">Youth & Women empowerment</div>
+          </div>
+          <div class="cta-row">
+            <a href="join.html" class="btn-primary">URP से जुड़ें</a>
+            <a href="vision.html" class="btn-ghost">हमारा विज़न देखें</a>
+          </div>
+          <div class="hero-meta">
+            <div><strong>70</strong> विधानसभा सीटों पर सोच, संगठन और रणनीति</div>
+            <div><strong>45–50</strong> seats को serious winning target बनाकर तैयारी</div>
+          </div>
+        </div>
+        <div class="hero-visual">
+          <div class="hero-card">
+            <h3>100-दिन का सुधार कार्यक्रम</h3>
+            <p>पहले 100 दिनों में measurable काम — कागजों में नहीं, जनता की नज़र में दिखने वाला बदलावा।</p>
+            <div class="hero-kpi">
+              <div class="hero-kpi-item">
+                <span>100+</span>
+                पहाड़ी गाँवों में प्राथमिक सर्वे
+              </div>
+              <div class="hero-kpi-item">
+                <span>24×7</span>
+                ऑनलाइन शिकायत व ट्रैकिंग पोर्टल
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- SIX PILLARS -->
+    <section class="section">
+      <div class="container">
+        <div class="section-header">
+          <h2>URP के 6 मुख्य आधार</h2>
+          <p>
+            URP सिर्फ़ चुनावी पार्टी नहीं, बल्कि एक long-term reform platform है। यहाँ slogans नहीं,
+            बल्कि clear pillars और measurable commitments हैं।
+          </p>
+        </div>
+        <div class="grid">
+          <div class="card">
+            <h3>1. पारदर्शी शासन</h3>
+            <p>हर काम का photo, geo-tag, खर्च और deadline — सब जनता के लिए online dashboard पर।</p>
+            <div class="tag-row">
+              <div class="tag">Online tracking</div>
+              <div class="tag">Citizen audit</div>
+            </div>
+          </div>
+          <div class="card">
+            <h3>2. पहाड़-केंद्रित नीति</h3>
+            <p>सिर्फ़ मैदानी फ़ोकस नहीं — hill blocks के लिए अलग योजना, अलग बजट और priority।</p>
+            <div class="tag-row">
+              <div class="tag">Anti-migration</div>
+              <div class="tag">Village clusters</div>
+            </div>
+          </div>
+          <div class="card">
+            <h3>3. युवा सशक्तिकरण</h3>
+            <p>Skill hub, local job mapping, startup support — “10 km radius के अंदर रोजगार” मॉडल।</p>
+            <div class="tag-row">
+              <div class="tag">Skill hubs</div>
+              <div class="tag">Entrepreneurship</div>
+            </div>
+          </div>
+          <div class="card">
+            <h3>4. महिला सुरक्षा व सम्मान</h3>
+            <p>मार्केट, स्कूल, bus-stand: lighting, CCTV, help-desk और फास्ट response mechanism।</p>
+          </div>
+          <div class="card">
+            <h3>5. ग्रामीण आजीविका</h3>
+            <p>Tourism, horticulture, herbal clusters — गाँव से ही रोज़गार, migration मजबूरी नहीं।</p>
+          </div>
+          <div class="card">
+            <h3>6. स्वच्छ राजनीति</h3>
+            <p>Candidate selection के लिए साफ़ criteria — serious criminal background वाले नाम नहीं।</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- WHY NEW PARTY / TARGET 2027 -->
+    <section class="section">
+      <div class="container two-col">
+        <div>
+          <div class="section-header">
+            <h2>क्यों चाहिए नया विकल्प?</h2>
+          </div>
+          <p class="small" style="margin-bottom:10px;">
+            BJP और Congress दोनों ने उत्तराखंड पर शासन किया, लेकिन आज भी पलायन, बेरोज़गारी, स्वास्थ्य और शिक्षा
+            जैसे मुद्दे वहीं के वहीं हैं। URP मानता है कि “पुरानी राजनीति से नया भविष्य नहीं बन सकता।”
+          </p>
+          <ul class="timeline">
+            <li>पिछले 20+ साल के report card का ईमानदार review — सिर्फ़ जीत का नहीं, काम का।</li>
+            <li>UKD जैसी क्षेत्रीय भावना को modern तरीके से strengthen करना, oppose नहीं।</li>
+            <li>Decision-making में youth, women और professionals को पहली line में लाना।</li>
+          </ul>
+        </div>
+        <div>
+          <div class="section-header">
+            <h2>Target 2027 — तैयारी अभी से</h2>
+          </div>
+          <div class="stats-row">
+            <div class="stat">
+              <span>Seats Focus</span>
+              <strong>50</strong>
+            </div>
+            <div class="stat">
+              <span>Core Volunteers</span>
+              <strong>10,000+</strong>
+            </div>
+            <div class="stat">
+              <span>District Teams</span>
+              <strong>13</strong>
+            </div>
+          </div>
+          <ul class="timeline" style="margin-top:10px;">
+            <li>Phase 1: सदस्यता, volunteer network, digital presence बनाना।</li>
+            <li>Phase 2: seat-wise survey, micro-issues mapping और candidate shortlisting।</li>
+            <li>Phase 3: public manifesto, booth-level structure और resources planning।</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <!-- HOW TO JOIN QUICK STEPS -->
+    <section class="section">
+      <div class="container">
+        <div class="section-header">
+          <h2>तुरंत कैसे जुड़ें?</h2>
+          <p>URP में joining process clear, digital और transparent है — कोई hidden membership या closed circle नहीं।</p>
+        </div>
+        <div class="grid">
+          <div class="card">
+            <h4>1. Online Membership Form</h4>
+            <p>Join पेज पर Google Form भरें (नाम, mobile, EPIC, जिला आदि)। डेटा सीधे secure Google Sheet में जाता है।</p>
+          </div>
+          <div class="card">
+            <h4>2. Verification & Role</h4>
+            <p>District coordinator WhatsApp / call से आपसे connect करेगा और आपकी भूमिका पर चर्चा करेगा।</p>
+          </div>
+          <div class="card">
+            <h4>3. Local Team में शामिल</h4>
+            <p>आपको आपके विधानसभा क्षेत्र की ground टीम में जोड़ा जाएगा — booth, ward या गाँव स्तर पर।</p>
+          </div>
+          <div class="card">
+            <h4>4. Candidate Track (Optional)</h4>
+            <p>जो लोग चुनाव लड़ना चाहते हैं, उनके लिए अतिरिक्त evaluation, survey और eligibility process होगा।</p>
+          </div>
+        </div>
+        <p style="font-size:13px;color:var(--muted);margin-top:10px;">
+          तैयार हैं ज़िम्मेदारी लेने के लिए? <a href="join.html" style="color:var(--primary-soft);font-weight:600;">Join पेज</a> पर जाएँ और form भरें।
+        </p>
+      </div>
+    </section>
+  </main>
+
+  <!-- FOOTER -->
+  <footer class="footer">
+    <div class="container footer-grid">
+      <div>
+        <div>© 2025 Uttarakhand Reform Party</div>
+        <div class="small">Registered as a reform-focused political platform for Uttarakhand.</div>
+      </div>
+      <div class="small">
+        <div>Contact: contact@uttarakhandreform.org</div>
+        <div>Phone: +91 98765 43210</div>
+      </div>
+      <div class="small">
+        <div><a href="join.html">Volunteer / Join</a></div>
+        <div><a href="candidates.html">Apply as Candidate</a></div>
+      </div>
+    </div>
+  </footer>
+
+</body>
+</html>
