--- a/about.html
+++ b/about.html
@@ -1,3 +1,335 @@
-<!doctype html><html lang="hi"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>About URP</title><link rel="stylesheet" href="assets/style.css"></head><body>
-<header class="header"><div class="container nav"><div class="logo"><img src="assets/logo.svg" alt="URP logo"/><div style="color:white">Uttarakhand Reform Party</div></div></div></header>
-<main class="section container"><h2>About URP</h2><p class="small">URP एक नागरिक-आधारित आंदोलन है जिसका लक्ष्य उत्तराखण्ड में पारदर्शिता और स्थानीय विकास लाना है।</p></main><footer class="footer"><div class="container">© 2025 URP</div></footer></body></html>
+<!doctype html>
+<html lang="hi">
+<head>
+  <meta charset="utf-8">
+  <title>About URP — Uttarakhand Reform Party</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="description" content="About Uttarakhand Reform Party (URP) — a reform-driven, mountain-first political platform in Uttarakhand.">
+
+  <!-- SAME STYLE AS HOME (INLINE, NO EXTERNAL FILE NEEDED) -->
+  <style>
+    :root{
+      --primary:#0a3d62;
+      --primary-soft:#174c91;
+      --accent:#f39c12;
+      --bg:#f5f7fa;
+      --card:#ffffff;
+      --muted:#6b7280;
+    }
+    *{box-sizing:border-box;margin:0;padding:0}
+    body{
+      font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,Arial,sans-serif;
+      background:var(--bg);
+      color:#111827;
+    }
+    a{text-decoration:none;color:inherit}
+
+    .header{
+      background:linear-gradient(90deg,var(--primary),#3b6df3);
+      color:#fff;
+      position:sticky;
+      top:0;
+      z-index:10;
+      box-shadow:0 4px 14px rgba(15,35,75,0.35);
+    }
+    .container{
+      max-width:1120px;
+      margin:0 auto;
+      padding:0 18px;
+    }
+    .nav{
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      padding:12px 0;
+    }
+    .logo-wrap{
+      display:flex;
+      align-items:center;
+      gap:10px;
+    }
+    .logo-mark{
+      width:36px;
+      height:36px;
+      border-radius:50%;
+      background:#fff;
+      color:var(--primary);
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      font-weight:800;
+      font-size:14px;
+    }
+    .brand-title{
+      font-weight:800;
+      letter-spacing:.03em;
+      font-size:15px;
+    }
+    .navlinks{
+      display:flex;
+      gap:18px;
+      font-size:14px;
+      font-weight:500;
+    }
+    .navlinks a{
+      color:rgba(255,255,255,0.94);
+      padding:4px 0;
+    }
+    .navlinks a.active{
+      border-bottom:2px solid var(--accent);
+    }
+
+    .hero{
+      padding:46px 0 26px;
+      background:
+        radial-gradient(circle at top left,#e1ecff,transparent 55%),
+        radial-gradient(circle at bottom right,#ffe7c7,transparent 55%);
+    }
+    .hero-title{
+      font-size:30px;
+      line-height:1.3;
+      color:#0b2b4a;
+      font-weight:800;
+      margin-bottom:6px;
+    }
+    .hero-sub{
+      font-size:15px;
+      color:#1f2933;
+      max-width:720px;
+    }
+    .hero-kicker{
+      font-size:12px;
+      text-transform:uppercase;
+      letter-spacing:.22em;
+      color:var(--muted);
+      margin-bottom:6px;
+    }
+
+    .section{
+      padding:30px 0;
+    }
+    .section-header{
+      display:flex;
+      flex-wrap:wrap;
+      justify-content:space-between;
+      gap:10px;
+      margin-bottom:16px;
+    }
+    .section-header h2{
+      font-size:22px;
+      color:#111827;
+    }
+    .section-header p{
+      font-size:13px;
+      color:var(--muted);
+      max-width:420px;
+    }
+    .two-col{
+      display:grid;
+      grid-template-columns:minmax(0,1.1fr) minmax(0,0.9fr);
+      gap:20px;
+    }
+    .card{
+      background:var(--card);
+      border-radius:14px;
+      padding:16px 16px 18px;
+      box-shadow:0 10px 26px rgba(15,23,42,0.06);
+    }
+    .card h3, .card h4{
+      font-size:17px;
+      margin-bottom:6px;
+      color:#0b2b4a;
+    }
+    .card p{
+      font-size:13px;
+      color:var(--muted);
+    }
+    .timeline{
+      list-style:none;
+      padding-left:0;
+      font-size:13px;
+      color:var(--muted);
+    }
+    .timeline li{
+      margin-bottom:8px;
+      padding-left:18px;
+      position:relative;
+    }
+    .timeline li::before{
+      content:"•";
+      position:absolute;
+      left:0;
+      top:0;
+      color:var(--accent);
+      font-size:18px;
+      line-height:1;
+    }
+    .tag-row{
+      display:flex;
+      flex-wrap:wrap;
+      gap:6px;
+      margin-top:6px;
+    }
+    .tag{
+      font-size:11px;
+      border-radius:999px;
+      padding:3px 8px;
+      background:#eef2ff;
+      color:#3730a3;
+    }
+    .small{font-size:12px;color:var(--muted);}
+
+    .footer{
+      background:#0b2b4a;
+      color:#fff;
+      padding:22px 0 18px;
+      margin-top:24px;
+      font-size:12px;
+    }
+    .footer-grid{
+      display:flex;
+      flex-wrap:wrap;
+      gap:14px;
+      justify-content:space-between;
+    }
+    .footer a{color:#e5e7eb}
+
+    @media (max-width:800px){
+      .navlinks{display:none;}
+      .two-col{grid-template-columns:1fr;}
+    }
+  </style>
+</head>
+<body>
+
+  <!-- HEADER -->
+  <header class="header">
+    <div class="container nav">
+      <div class="logo-wrap">
+        <div class="logo-mark">URP</div>
+        <div class="brand-title">Uttarakhand Reform Party</div>
+      </div>
+      <nav class="navlinks">
+        <a href="index.html">Home</a>
+        <a href="about.html" class="active">About</a>
+        <a href="vision.html">Vision</a>
+        <a href="join.html">Join</a>
+        <a href="candidates.html">Candidates</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <!-- HERO -->
+    <section class="hero">
+      <div class="container">
+        <div class="hero-kicker">ABOUT • URP</div>
+        <h1 class="hero-title">URP — सत्ता नहीं, सुधार की राजनीति</h1>
+        <p class="hero-sub">
+          Uttarakhand Reform Party (URP) उन लोगों की collective आवाज़ है जो मानते हैं कि 
+          “पुरानी राजनीति से नया भविष्य नहीं बन सकता।”  
+          URP का उद्देश्य है कि उत्तराखंड में राजनीति फिर से <strong>सेवा, ईमानदारी और परिणाम</strong> पर वापस आए।
+        </p>
+      </div>
+    </section>
+
+    <!-- STORY + PRINCIPLES -->
+    <section class="section">
+      <div class="container two-col">
+        <div>
+          <div class="section-header">
+            <h2>हमारी कहानी</h2>
+          </div>
+          <p class="small" style="margin-bottom:10px;">
+            पिछले दो दशकों में उत्तराखंड ने बार-बार सरकार बदलते देखी, पर सामान्य नागरिक की समस्याएँ
+            — पलायन, बेरोज़गारी, स्वास्थ्य, शिक्षा — ज्यों की त्यों रहीं।  
+            URP ऐसे लोगों की टीम से बना है जो सिर्फ़ शिकायत नहीं, <strong>solution-oriented राजनीति</strong> चाहते हैं।
+          </p>
+          <ul class="timeline">
+            <li>सोच की शुरुआत: युवा, भूतपूर्व सैनिक, professionals और सामाजिक कार्यकर्ताओं द्वारा informal discussions।</li>
+            <li>चुनावी गणित से पहले data, surveys और ground feedback पर focus।</li>
+            <li>UKD जैसी क्षेत्रीय भावना को modern, professional रूप में strengthen करने की सोच — oppose नहीं, साथ लेकर चलना।</li>
+          </ul>
+        </div>
+
+        <div>
+          <div class="card">
+            <h3>मूल सिद्धांत (Core Principle)</h3>
+            <p class="small">
+              हमारा एक simple test है — <strong>“सत्ता बने या न बने, क्या यह कदम सुधार लाएगा?”</strong>  
+              हर policy, हर बयान और हर alliance इस test पर परखा जाएगा।
+            </p>
+            <div class="tag-row">
+              <div class="tag">Reform first</div>
+              <div class="tag">Evidence-based policy</div>
+              <div class="tag">Mountain-first lens</div>
+            </div>
+          </div>
+          <div class="card" style="margin-top:12px;">
+            <h4>हमारा वादा</h4>
+            <p class="small">
+              URP किसी व्यक्तिगत नेता का प्रोजेक्ट नहीं, बल्कि ऐसी टीम का मंच है जो अपने नाम से ज़्यादा
+              <strong>सिस्टम बदलने की credibility</strong> पर भरोसा रखती है।
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- VALUES + CULTURE -->
+    <section class="section">
+      <div class="container two-col">
+        <div>
+          <div class="section-header">
+            <h2>Core Values (मूल मूल्य)</h2>
+            <p>URP के भीतर काम करने वाले हर व्यक्ति से इन चार मूल्यों पर commitment ली जाएगी।</p>
+          </div>
+          <div class="card">
+            <ul class="timeline">
+              <li><strong>ईमानदारी और पारदर्शिता</strong> — निजी जीवन और सार्वजनिक निर्णय, दोनों में।</li>
+              <li><strong>स्थानीय सम्मान</strong> — पहाड़, मैदान, शहर, गाँव; हर क्षेत्र की voice को बराबर महत्व।</li>
+              <li><strong>युवा और महिला नेतृत्व</strong> — front row में youth और women, सिर्फ़ मंच सजाने के लिए नहीं।</li>
+              <li><strong>समस्या नहीं, समाधान की राजनीति</strong> — हर criticism के साथ ठोस विकल्प रखना।</li>
+            </ul>
+          </div>
+        </div>
+
+        <div>
+          <div class="section-header">
+            <h2>Organisational Culture</h2>
+          </div>
+          <div class="card">
+            <h4>कैसी पार्टी बनना चाहते हैं?</h4>
+            <ul class="timeline">
+              <li>जहाँ internal democracy हो — ticket और पद केवल “ऊपर” तय न हों।</li>
+              <li>जहाँ volunteers को केवल poster-pasting नहीं, decision-making में भी जगह मिले।</li>
+              <li>जहाँ data, research और ground survey पर strategy बने, rumours पर नहीं।</li>
+              <li>जहाँ गलती होने पर उसे स्वीकारना weakness नहीं, strength माना जाए।</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <!-- FOOTER -->
+  <footer class="footer">
+    <div class="container footer-grid">
+      <div>
+        <div>© 2025 Uttarakhand Reform Party</div>
+        <div class="small">Reform-focused political platform for Uttarakhand.</div>
+      </div>
+      <div class="small">
+        <div>Contact: contact@uttarakhandreform.org</div>
+        <div>Phone: +91 98765 43210</div>
+      </div>
+      <div class="small">
+        <div><a href="join.html">Volunteer / Join</a></div>
+        <div><a href="candidates.html">Apply as Candidate</a></div>
+      </div>
+    </div>
+  </footer>
+
+</body>
+</html>
