--- a/about.html
+++ b/about.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="About Uttarakhand Reform Party (URP) — a reform-driven, mountain-first political platform in Uttarakhand.">
 
-  <!-- SAME STYLE AS HOME (INLINE, NO EXTERNAL FILE NEEDED) -->
   <style>
     :root{
       --primary:#0a3d62;
@@ -247,7 +246,7 @@
             URP ऐसे लोगों की टीम से बना है जो सिर्फ़ शिकायत नहीं, <strong>solution-oriented राजनीति</strong> चाहते हैं।
           </p>
           <ul class="timeline">
-            <li>सोच की शुरुआत: युवा, भूतपूर्व सैनिक, professionals और सामाजिक कार्यकर्ताओं द्वारा informal discussions।</li>
+            <li>शुरुआत youth, भूतपूर्व सैनिक, professionals और सामाजिक कार्यकर्ताओं की informal बैठकों से।</li>
             <li>चुनावी गणित से पहले data, surveys और ground feedback पर focus।</li>
             <li>UKD जैसी क्षेत्रीय भावना को modern, professional रूप में strengthen करने की सोच — oppose नहीं, साथ लेकर चलना।</li>
           </ul>
@@ -257,7 +256,7 @@
           <div class="card">
             <h3>मूल सिद्धांत (Core Principle)</h3>
             <p class="small">
-              हमारा एक simple test है — <strong>“सत्ता बने या न बने, क्या यह कदम सुधार लाएगा?”</strong>  
+              हमारा simple test — <strong>“सत्ता बने या न बने, क्या यह कदम सुधार लाएगा?”</strong>  
               हर policy, हर बयान और हर alliance इस test पर परखा जाएगा।
             </p>
             <div class="tag-row">
@@ -269,7 +268,7 @@
           <div class="card" style="margin-top:12px;">
             <h4>हमारा वादा</h4>
             <p class="small">
-              URP किसी व्यक्तिगत नेता का प्रोजेक्ट नहीं, बल्कि ऐसी टीम का मंच है जो अपने नाम से ज़्यादा
+              URP किसी एक नेता का personal project नहीं, बल्कि ऐसी टीम का मंच है जो अपने नाम से ज़्यादा
               <strong>सिस्टम बदलने की credibility</strong> पर भरोसा रखती है।
             </p>
           </div>
@@ -290,7 +289,7 @@
               <li><strong>ईमानदारी और पारदर्शिता</strong> — निजी जीवन और सार्वजनिक निर्णय, दोनों में।</li>
               <li><strong>स्थानीय सम्मान</strong> — पहाड़, मैदान, शहर, गाँव; हर क्षेत्र की voice को बराबर महत्व।</li>
               <li><strong>युवा और महिला नेतृत्व</strong> — front row में youth और women, सिर्फ़ मंच सजाने के लिए नहीं।</li>
-              <li><strong>समस्या नहीं, समाधान की राजनीति</strong> — हर criticism के साथ ठोस विकल्प रखना।</li>
+              <li><strong>समाधान की राजनीति</strong> — हर criticism के साथ ठोस विकल्प और road-map।</li>
             </ul>
           </div>
         </div>
@@ -300,12 +299,12 @@
             <h2>Organisational Culture</h2>
           </div>
           <div class="card">
-            <h4>कैसी पार्टी बनना चाहते हैं?</h4>
+            <h4>हम कैसी पार्टी बनना चाहते हैं?</h4>
             <ul class="timeline">
-              <li>जहाँ internal democracy हो — ticket और पद केवल “ऊपर” तय न हों।</li>
+              <li>जहाँ internal democracy हो — ticket और पद केवल “ऊपर से” तय न हों।</li>
               <li>जहाँ volunteers को केवल poster-pasting नहीं, decision-making में भी जगह मिले।</li>
-              <li>जहाँ data, research और ground survey पर strategy बने, rumours पर नहीं।</li>
-              <li>जहाँ गलती होने पर उसे स्वीकारना weakness नहीं, strength माना जाए।</li>
+              <li>जहाँ strategy rumours पर नहीं, data, research और survey पर बने।</li>
+              <li>जहाँ गलती स्वीकारना weakness नहीं, strength माना जाए।</li>
             </ul>
           </div>
         </div>
@@ -333,4 +332,3 @@
 
 </body>
 </html>
-
